chore(*): replace swayidle and waylock with Hypr equivalents

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,10 +47,6 @@ misc {
     disable_splash_rendering = true
 }
 
-cursor {
-    no_hardware_cursors = true
-}
-
 decoration {
     rounding=9      # Use an odd value here for perfect symmetry.
 
@@ -109,7 +105,7 @@ bind=SUPER,Q,killactive,
 bind=SUPERSHIFT,Q,exit,
 bind=SUPER,E,exec,wofi
 bind=SUPER,V,togglefloating,
-bind=SUPER,L,exec,waylock
+bind=SUPER,L,exec,hyprlock
 bind=SUPER,F,fullscreen
 
 # Window focus
@@ -175,9 +171,7 @@ exec-once=waybar
 exec-once=mpd
 exec-once=gammastep
 exec-once=mako
-
-# Do not invoke `swayidle` with `-w` switch, or it will behave poorly.
-exec-once=swayidle
+exec-once=hypridle
 
 # Start the YubiKey Touch Detector daemon
 exec-once=yubikey-touch-detector --libnotify
