--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,8 +1,13 @@
 # Wallpapers to be loaded
-preload = ~/Pictures/wallpaper/1-single/marshmello-space.jpg
+preload = ~/Pictures/wallpaper/2-double/witcher3-left.jpg
+preload = ~/Pictures/wallpaper/2-double/witcher3-right.jpg
 
 # Wallpapers to be applied by default
-wallpaper = ,~/Pictures/wallpaper/1-single/marshmello-space.jpg
+wallpaper = DP-1,~/Pictures/wallpaper/2-double/witcher3-left.jpg
+wallpaper = DP-2,~/Pictures/wallpaper/2-double/witcher3-right.jpg
 
 # Disable IPC unless needed
 ipc = off
+
+# Disable annoying splash text
+splash = false
