fix(hyprland): disable mouse acceleration

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -17,24 +17,21 @@ monitor = DP-1,highrr,0x0,1
 monitor = DP-2,highres,3840x0,1
 
 input {
-    kb_layout=
-    kb_variant=
-    kb_model=
-    kb_options=
-    kb_rules=
+    # Keyboard Options
+    numlock_by_default = 1
 
-    follow_mouse=1
-    numlock_by_default=1
+    # Mouse/Touchpad Options
+    sensitivity = 0.0           # Mouse sensitivity (range -1.0 to 1.0)
+    accel_profile = flat        # Mouse acceleration (adaptive, flat, or custom)
 
     touchpad {
-        disable_while_typing=true
+        disable_while_typing = true
     }
+
+    follow_mouse = 1            # Window focus follows mouse
 }
 
 general {
-    sensitivity=1.00
-    apply_sens_to_raw=0  # do not apply the sensitivity to raw input (e.g. games)
-
     gaps_in=5
     gaps_out=10
     border_size=2
