feat(tmux): enable OSC 8 hyperlink support

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -30,6 +30,8 @@ set -g history-limit 50000
 # Reload Tmux with Alt + r
 bind M-r source-file ~/.config/tmux/tmux.conf
 
+# Enable OSC 8 hyperlink support
+set -ga terminal-features ",*:hyperlinks"
 
 ##################################
 ###   Set Copy Mode keybinds   ###
