fix(bootstrap): add missing packages

--- a/.config/yadm/ansible/roles/gui/tasks/packages/archlinux.yml
+++ b/.config/yadm/ansible/roles/gui/tasks/packages/archlinux.yml
@@ -8,9 +8,13 @@
       - hyprland
       - hyprlock
       - hyprpaper
+      - jq
+      - libnotify
+      - mako
       - mpd
       - pacman-contrib
       - waybar
+      - wl-clipboard
       - wofi
       - xdg-desktop-portal-gtk
       - xdg-desktop-portal-hyprland
