--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -50,8 +50,8 @@
         "format": " {}%",
     },
     "temperature": {
-        "thermal-zone": 0,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+        // "thermal-zone": 0,
+        "hwmon-path": "/sys/class/hwmon/hwmon1/temp4_input",
         "critical-threshold": 80,
         // "format-critical": "{icon} {temperatureC}°C",
         "format": "{icon} {temperatureC}°C",
@@ -79,7 +79,7 @@
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
         "format-wifi": "直 {signalStrength}%",
-        "format-ethernet": "ﯱ Connected",
+        "format-ethernet": "ﯱ {ifname}",
         "format-linked": "ﯳ (No IP)",
         "format-disconnected": " Disconnected",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
@@ -137,7 +137,8 @@
     },
     "tray": {
         "icon-size": 24,
-        "spacing": 10
+        "spacing": 10,
+        "reverse-direction": true
     },
     "custom/check_updates": {
         "exec": "~/.config/waybar/scripts/check_updates.sh",
