feat(hyprland): mic keybinds and various fixes/improvements

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,10 +53,12 @@ decoration {
         passes=1     # Minimum 1, more passes = more resource intensive.
     }
 
-    drop_shadow = true
-    shadow_range = 10
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+        enabled = true
+        range = 10
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
 }
 
 animations {
@@ -78,6 +80,10 @@ dwindle {
     pseudotile = false     # Initialize with pseudotiling off
     force_split = 2        # Always split towards the right/bottom
     preserve_split = true  # You probably want this on
+}
+
+render {
+    explicit_sync = 0
 }
 
 # #################### #
@@ -138,11 +144,19 @@ bind=SUPERSHIFT,8,movetoworkspace,8
 bind=SUPERSHIFT,9,movetoworkspace,9
 bind=SUPERSHIFT,0,movetoworkspace,10
 
+# Monitors
+bind=SUPER,Tab,focusmonitor,+1
+
 # Media keys
 bind=,XF86AudioPlay,exec,mpc toggle
 bind=,XF86AudioMute,exec,amixer -q set Master toggle
 binde=,XF86AudioLowerVolume,exec,amixer -q set Master 5%-
 binde=,XF86AudioRaiseVolume,exec,amixer -q set Master 5%+
+
+# Microphone controls (persistent toggle and Push-To-Talk)
+bind=SUPER,XF86Calculator,exec,pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bind=,XF86Calculator,exec,pactl set-source-mute @DEFAULT_SOURCE@ 0
+bindr=,XF86Calculator,exec,pactl set-source-mute @DEFAULT_SOURCE@ 1
 
 # Screenshots and Recordings
 bind=,Print,exec,grim -o $(hyprctl -j activeworkspace | jq -r .monitor)
@@ -158,6 +172,10 @@ workspace = 2,  monitor:DP-1
 workspace = 3,  monitor:DP-1
 workspace = 4,  monitor:DP-1
 workspace = 5,  monitor:DP-1
+workspace = 6,  monitor:DP-2
+workspace = 7,  monitor:DP-2
+workspace = 8,  monitor:DP-2
+workspace = 9,  monitor:DP-2
 workspace = 10, monitor:DP-2
 
 # ################# #
