feat(*): add selection screenshotting

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -159,7 +159,8 @@ bind=,XF86Calculator,exec,pactl set-source-mute @DEFAULT_SOURCE@ 0
 bindr=,XF86Calculator,exec,pactl set-source-mute @DEFAULT_SOURCE@ 1
 
 # Screenshots and Recordings
-bind=,Print,exec,grim -o $(hyprctl -j activeworkspace | jq -r .monitor)
+bind=,Print,exec,grim -g "$(slurp)"
+bind=SHIFT,Print,exec,grim -o $(hyprctl -j activeworkspace | jq -r .monitor)  # Screenshot focused workspace
 bind=SUPERSHIFT,R,exec,save-replay.sh
 
 # ####################### #
