chore(hyprland): disable update dialog

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -44,6 +44,10 @@ misc {
     disable_splash_rendering = true
 }
 
+ecosystem {
+    no_update_news = true
+}
+
 decoration {
     rounding=9      # Use an odd value here for perfect symmetry.
 
