chore(hyprland): clean up configuration file

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,51 +1,51 @@
-# ########################################################################### #
-# #   ██╗  ██╗██╗   ██╗██████╗ ██████╗ ██╗      █████╗ ███╗   ██╗██████╗    # #
-# #   ██║  ██║╚██╗ ██╔╝██╔══██╗██╔══██╗██║     ██╔══██╗████╗  ██║██╔══██╗   # #
-# #   ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ███████║██╔██╗ ██║██║  ██║   # #
-# #   ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██╔══██║██║╚██╗██║██║  ██║   # #
-# #   ██║  ██║   ██║   ██║     ██║  ██║███████╗██║  ██║██║ ╚████║██████╔╝   # #
-# #   ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝    # #
-# ########################################################################### #
+###############################################################################
+###############################################################################
+###   ██╗  ██╗██╗   ██╗██████╗ ██████╗ ██╗      █████╗ ███╗   ██╗██████╗    ###
+###   ██║  ██║╚██╗ ██╔╝██╔══██╗██╔══██╗██║     ██╔══██╗████╗  ██║██╔══██╗   ###
+###   ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ███████║██╔██╗ ██║██║  ██║   ###
+###   ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██╔══██║██║╚██╗██║██║  ██║   ###
+###   ██║  ██║   ██║   ██║     ██║  ██║███████╗██║  ██║██║ ╚████║██████╔╝   ###
+###   ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝    ###
+###############################################################################
+###############################################################################
+
 
 # Refer to https://wiki.hyprland.org for more information.
 
+
+####################
+###   MONITORS   ###
+####################
+
 # Keep the primary monitor at its highest refresh rate.
-monitor = DP-1,highrr,0x0,1
+monitor = DP-1,highres,0x0,1
 
 # Keep a large buffer zone for the auxilliary, so that the mouse doesn't traverse displays.
 # Mouse can be switched to the aux display using workspace keybinds.
 monitor = DP-2,highres,3840x0,1
 
-input {
-    # Keyboard Options
-    numlock_by_default = 1
 
-    # Mouse/Touchpad Options
-    sensitivity = 0.0           # Mouse sensitivity (range -1.0 to 1.0)
-    accel_profile = flat        # Mouse acceleration (adaptive, flat, or custom)
+##############################
+###   MAIN CONFIGURATION   ###
+##############################
 
-    touchpad {
-        disable_while_typing = true
-    }
+animations {
+    enabled = true
 
-    follow_mouse = 1            # Window focus follows mouse
+    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+
+    animation = windows, 1, 7, myBezier
+    animation = windowsOut, 1, 7, default, popin 80%
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 6, default
 }
 
-general {
-    gaps_in=5
-    gaps_out=10
-    border_size=2
-    col.active_border=0xff5c6370
-    col.inactive_border=0xff3e4452
-}
-
-misc {
-    disable_hyprland_logo = true
-    disable_splash_rendering = true
-}
-
-ecosystem {
-    no_update_news = true
+cursor {
+    hide_on_key_press = true
 }
 
 decoration {
@@ -65,34 +65,54 @@ decoration {
     }
 }
 
-animations {
-    enabled = true
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
-}
-
 dwindle {
     pseudotile = false     # Initialize with pseudotiling off
     force_split = 2        # Always split towards the right/bottom
     preserve_split = true  # You probably want this on
 }
 
+ecosystem {
+    no_donation_nag = 1
+    no_update_news = true
+}
+
+general {
+    gaps_in=5
+    gaps_out=10
+    border_size=2
+    col.active_border=0xff5c6370
+    col.inactive_border=0xff3e4452
+}
+
+input {
+    # Keyboard Options
+    numlock_by_default = 1
+
+    # Mouse/Touchpad Options
+    sensitivity = 0.0           # Mouse sensitivity (range -1.0 to 1.0)
+    accel_profile = flat        # Mouse acceleration (adaptive, flat, or custom)
+
+    touchpad {
+        disable_while_typing = true
+    }
+
+    follow_mouse = 1            # Window focus follows mouse
+}
+
+misc {
+    disable_hyprland_logo = true
+    disable_splash_rendering = true
+}
+
 render {
     explicit_sync = 0
 }
 
-# #################### #
-# #   WINDOW RULES   # #
-# #################### #
+
+########################
+###   WINDOW RULES   ###
+########################
+
 windowrule=workspace 2,^(firefox)$
 windowrule=fullscreen,^(gamescope)$
 
@@ -103,9 +123,11 @@ windowrulev2 = idleinhibit focus,monitor: 1,fullscreen: 1
 windowrule=monitor 2,^(discord)$
 windowrule=fullscreen,^(discord)$
 
-# ################ #
-# #   KEYBINDS   # #
-# ################ #
+
+####################
+###   KEYBINDS   ###
+####################
+
 # General
 bind=SUPER,Return,exec,alacritty
 bind=SUPER,Q,killactive,
@@ -167,9 +189,10 @@ bind=,Print,exec,grim -g "$(slurp)"
 bind=SHIFT,Print,exec,grim -o $(hyprctl -j activeworkspace | jq -r .monitor)  # Screenshot focused workspace
 bind=SUPERSHIFT,R,exec,save-replay.sh
 
-# ####################### #
-# #   Workspace Rules   # #
-# ####################### #
+
+###########################
+###   Workspace Rules   ###
+###########################
 
 # Bind workspace 0 to auxilliary monitor
 workspace = 1,  monitor:DP-1
@@ -183,15 +206,18 @@ workspace = 8,  monitor:DP-2
 workspace = 9,  monitor:DP-2
 workspace = 10, monitor:DP-2
 
-# ################# #
-# #   Autostart   # #
-# ################# #
+
+#####################
+###   Autostart   ###
+#####################
+
 exec-once=hyprpaper
 exec-once=waybar
 exec-once=mpd
 exec-once=gammastep
 exec-once=mako
 exec-once=hypridle
+exec-once=nm-applet
 
 # Start the YubiKey Touch Detector daemon
 exec-once=yubikey-touch-detector --libnotify
