feat(hyprland): float nm-applet windows

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -116,6 +116,9 @@ render {
 windowrule=workspace 2,^(firefox)$
 windowrule=fullscreen,^(gamescope)$
 
+# Set floating windows
+windowrulev2 = float, class:nm-connection-editor
+
 # Inhibit idle when the primary display has a fullscreen window
 windowrulev2 = idleinhibit focus,monitor: 1,fullscreen: 1
 
