chore(hyprland): update config for v0.48

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -105,7 +105,7 @@ misc {
 }
 
 render {
-    explicit_sync = 0
+    explicit_sync = 1
 }
 
 
@@ -113,18 +113,18 @@ render {
 ###   WINDOW RULES   ###
 ########################
 
-windowrule=workspace 2,^(firefox)$
-windowrule=fullscreen,^(gamescope)$
+windowrule = workspace:2, class:firefox
+windowrule = fullscreen, class:gamescope
 
 # Set floating windows
-windowrulev2 = float, class:nm-connection-editor
+windowrule = float, class:nm-connection-editor
 
-# Inhibit idle when the primary display has a fullscreen window
-windowrulev2 = idleinhibit focus,monitor: 1,fullscreen: 1
+# Inhibit idle when the primary display has a focused fullscreen window
+windowrule = idleinhibit focus, monitor:1, fullscreen:1
 
 # Fullscreen Discord on the auxilliary display
-windowrule=monitor 2,^(discord)$
-windowrule=fullscreen,^(discord)$
+windowrule = monitor:2, class:discord
+windowrule = fullscreen, class:discord
 
 
 ####################
