chore(hyprland): update config options per upstream changes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,6 +46,11 @@ animations {
 
 cursor {
     hide_on_key_press = true
+    no_hardware_cursors = true
+}
+
+debug {
+    disable_logs = false
 }
 
 decoration {
@@ -59,7 +64,7 @@ decoration {
 
     shadow {
         enabled = true
-        range = 10
+        range = 20
         render_power = 3
         color = rgba(1a1a1aee)
     }
@@ -77,6 +82,7 @@ ecosystem {
 }
 
 general {
+    allow_tearing = true
     gaps_in=5
     gaps_out=10
     border_size=2
@@ -104,28 +110,28 @@ misc {
     disable_splash_rendering = true
 }
 
-render {
-    explicit_sync = 1
-}
-
 
 ########################
 ###   WINDOW RULES   ###
 ########################
 
-windowrule = workspace:2, class:firefox
+windowrule = workspace 2, class:firefox
 windowrule = fullscreen, class:gamescope
 
 # Set floating windows
+windowrule = size 80%, class:feh
+windowrule = float, class:feh
 windowrule = float, class:nm-connection-editor
 
 # Inhibit idle when the primary display has a focused fullscreen window
 windowrule = idleinhibit focus, monitor:1, fullscreen:1
 
 # Fullscreen Discord on the auxilliary display
-windowrule = monitor:2, class:discord
+windowrule = monitor 2, class:discord
 windowrule = fullscreen, class:discord
 
+# Immediate present mode (enable tearing) for games
+windowrule = immediate, class:^(steam_app_\d+)$, fullscreen:0
 
 ####################
 ###   KEYBINDS   ###
@@ -189,7 +195,8 @@ bindr=,XF86Calculator,exec,pactl set-source-mute @DEFAULT_SOURCE@ 1
 
 # Screenshots and Recordings
 bind=,Print,exec,grim -g "$(slurp)"
-bind=SHIFT,Print,exec,grim -o $(hyprctl -j activeworkspace | jq -r .monitor)  # Screenshot focused workspace
+bind=SHIFT,Print,exec,grim -o $(hyprctl -j activeworkspace | jq -r .monitor) && notify-send -u low 'Screenshot taken!'  # Focused workspace
+bind=SUPERSHIFT,Print,exec,toggle_record.sh  # Focused workspace
 bind=SUPERSHIFT,R,exec,save-replay.sh
 
 
