chore(hyprland): force 1080p for VMs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,6 +24,8 @@ monitor = DP-1,highres,0x0,1
 # Mouse can be switched to the aux display using workspace keybinds.
 monitor = DP-2,highres,3840x0,1
 
+# Force 1080p60 for VMs
+monitor = Virtual-1,1920x1080@60,0x0,1
 
 ##############################
 ###   MAIN CONFIGURATION   ###
